# ownvsrent

./: .gitignore  CLAUDE.md  PRD.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .gitignore  main.py  pyproject.toml
backend/src/ownvsrent/: __init__.py  main.py
backend/src/ownvsrent/api/: routes.py
backend/src/ownvsrent/engine/: __init__.py  amortization.py  buying.py  calculator.py  defaults.py  montecarlo.py  renting.py  sensitivity.py  taxes.py  types.py  wealth.py
backend/tests/: conftest.py  test_health.py
backend/tests/engine/: test_amortization.py  test_buying.py  test_calculator.py  test_montecarlo.py  test_renting.py  test_sensitivity.py  test_taxes.py  test_types.py  test_wealth.py
docs/plans/: 2026-02-07-aws-deployment-design.md  2026-02-07-aws-deployment-implementation.md  2026-02-07-calculation-engine-design.md  2026-02-07-calculation-engine-implementation.md  2026-02-07-project-scaffolding.md  2026-02-07-python-fastapi-design.md  2026-02-08-five-features-design.md  2026-02-08-five-features-implementation.md  2026-02-08-frontend-calculator-ui-design.md  2026-02-08-frontend-calculator-ui-implementation.md  2026-02-08-seo-monetization-design.md  2026-02-08-seo-monetization-implementation.md  (+3 more)
frontend/: .env.example  .env.production  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
infrastructure/: .gitignore  acm.tf  cloudfront.tf  ec2.tf  main.tf  outputs.tf  route53.tf  s3.tf  variables.tf
notebooks/: rent_vs_buy_tutorial.ipynb
reddit-monitor/: SETUP.md  reddit-monitor-skill.md
(+54 files in other folders)
